DevTools: Fix show hide debugger sidebar button appearance and scrollbars around it.
BUG=349888

Review URL: https://codereview.chromium.org/191013002

git-svn-id: svn://svn.chromium.org/blink/trunk@169025 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/canvasProfiler.css
+++ b/front_end/canvasProfiler.css
@@ -83,13 +83,8 @@
     border: none;
 }
 
-button.status-bar-item.canvas-sidebar-show-hide-button {
-    right: 15px;
-    z-index: 13;
-}
-
-button.status-bar-item.canvas-sidebar-show-hide-button.toggled-left {
-    right: 0;
+.canvas-profile-view button.right-sidebar-show-hide-button.canvas-sidebar-show-hide-button.toggled-hide {
+    margin-right: 15px;
 }
 
 .canvas-replay-button {
